// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`dts should generate basic dts files 1`] = `
"interface User {
	id: number;
	name: string;
}
declare function getUserName(user: User): string;
export { getUserName, User };
"
`;

exports[`dts should handle imports and exports between multiple files 1`] = `
"interface User {
	id: number;
	name: string;
	email: string;
}
declare class UserService {
	getUser(id: number): User;
}
declare function formatId(id: number): string;
export { formatId, UserService, User };
"
`;

exports[`dts should handle imports and exports between multiple files 2`] = `
"interface User {
	id: number;
	name: string;
	email: string;
}
declare class UserService {
	getUser(id: number): User;
}
declare function formatId(id: number): string;
export { formatId, UserService, User };
"
`;

exports[`dts should handle path aliases in tsconfig 1`] = `
"interface Product {
	id: number;
	name: string;
	price: number;
}
declare function formatPrice(price: number): string;
declare function displayProduct(product: Product): string;
export { formatPrice, displayProduct, Product };
"
`;

exports[`dts should handle circular dependencies 1`] = `
"interface B {
	id: number;
	code: string;
	a?: A;
}
declare function createB(code: string): B;
interface A {
	id: number;
	name: string;
	b?: B;
}
declare function createA(name: string): A;
export { createB, createA, B, A };
"
`;

exports[`dts should handle type-only imports and exports 1`] = `
"interface Config {
	apiKey: string;
	timeout: number;
	debug?: boolean;
}
type ConfigKey = keyof Config;
declare function initialize(config: Config): void;
export { initialize, ConfigKey };
"
`;

exports[`dts should handle triple-slash directives 1`] = `
"declare function loadConfig(path: string): Config;
export { loadConfig };
"
`;

exports[`dts should handle dynamic imports 1`] = `
"declare function loadFeature(name: string): Promise<typeof Dashboard | typeof Settings>;
export { loadFeature };
"
`;

exports[`dts should handle import statements with relative paths properly 1`] = `
"interface Helper {
	helper: (data: string) => string;
}
declare function processData(data: string): string;
export { processData, Helper };
"
`;

exports[`dts should handle project with nested barrel files 1`] = `
"interface Credentials {
	username: string;
	password: string;
}
declare class AuthService {
	login(credentials: Credentials): boolean;
}
interface User {
	id: string;
	name: string;
	email: string;
}
declare class UserService {
	getUser(id: string): User | null;
}
export { UserService, User, Credentials, AuthService };
"
`;

exports[`dts should handle project with custom baseUrl and multiple path mappings 1`] = `
"interface AppConfig {
	apiUrl: string;
	debug: boolean;
}
interface UserProfile {
	id: string;
	displayName: string;
	avatar?: string;
}
type AppTypes = "web" | "mobile" | "desktop";
declare function HelperFunction(value: string): string;
declare function initApp(config: AppConfig): void;
export { initApp, UserProfile, HelperFunction, AppTypes, AppConfig };
"
`;

exports[`dts should handle project with monorepo structure 1`] = `
"declare class CoreFeature {
	getData(): string;
}
declare function formatText(text: string): string;
declare function formatNumber(num: number): string;
declare function enhancedFeature(): string;
export { formatText, formatNumber, enhancedFeature, CoreFeature };
"
`;

exports[`dts should handle project with multiple entry points 1`] = `
"interface AppConfig {
	name: string;
	version: string;
}
declare function initApp(): void;
declare class ApiClient {
	connect(): boolean;
	request<T>(endpoint: string): Promise<T>;
}
declare function bootstrap(): void;
export { initApp, bootstrap, AppConfig, ApiClient };
"
`;

exports[`dts should handle project with multiple entry points 2`] = `
"declare class Command {
	execute(args: string[]): void;
}
declare function run(args: string[]): void;
export { run, Command };
"
`;

exports[`dts should handle projects with nested tsconfig files 1`] = `
"interface RootFeature {
	name: string;
}
interface Button {
	label: string;
	onClick: () => void;
}
interface Input {
	value: string;
	onChange: (value: string) => void;
}
export { RootFeature, Input, Button };
"
`;

exports[`dts should handle project references 1`] = `
"interface CoreModule {
	init(): void;
}
declare class Core implements CoreModule {
	init(): void;
}
interface Logger {
	log(message: string): void;
}
declare class ConsoleLogger implements Logger {
	private core;
	constructor(core: CoreModule);
	log(message: string): void;
}
interface AppConfig {
	version: string;
	environment: string;
}
export { Logger, CoreModule, Core, ConsoleLogger, AppConfig };
"
`;

exports[`dts should handle tsconfig paths with complex wildcards 1`] = `
"interface ButtonProps {
	label: string;
	onClick: () => void;
	className?: string;
}
declare function Button(props: ButtonProps): null;
declare function formatDate(date: Date): string;
interface User {
	id: string;
	name: string;
}
declare function fetchUsers(): Promise<any[]>;
import { getAnalytics } from "services/@analytics/v2";
declare function initApp(): void;
export { initApp, getAnalytics, formatDate, fetchUsers, User, Button };
"
`;

exports[`dts should handle non-standard file extensions (.tsx) 1`] = `
"interface ButtonProps {
	label: string;
	onClick: () => void;
	className?: string;
}
declare function Button(props: ButtonProps): null;
interface InputProps {
	value: string;
	onChange: (value: string) => void;
	placeholder?: string;
}
declare function Input(props: InputProps): null;
export { InputProps, Input, ButtonProps, Button };
"
`;

exports[`dts should resolve index.ts files when importing directories 1`] = `
"declare class ServiceA {
	name: string;
	doSomething(): void;
}
declare class ServiceB {
	name: string;
	doSomethingElse(): string;
}
declare class UtilA {
	static formatString(str: string): string;
}
declare function helperFunction(value: number): number;
interface ComponentAProps {
	title: string;
	subtitle?: string;
}
declare class ComponentA {
	render(props: ComponentAProps): string;
}
interface ComponentBProps {
	items: string[];
	onSelect: (item: string) => void;
}
declare class ComponentB {
	render(props: ComponentBProps): string;
}
declare function appInit(): void;
export { helperFunction, appInit, UtilA, ServiceB, ServiceA, ComponentBProps, ComponentB, ComponentAProps, ComponentA };
"
`;

exports[`dts should handle index resolution in deep nested structures 1`] = `
"declare class Feature {
	name: string;
	enable(): boolean;
}
declare class FeatureA {
	name: string;
	execute(): string;
}
declare class FeatureB {
	name: string;
	process(data: string): string;
}
interface SubFeatureOptions {
	timeout: number;
	retries?: number;
}
declare class SubFeature {
	name: string;
	configure(options: SubFeatureOptions): void;
}
declare function initializeApp(): {
	feature: Feature
	subFeature: SubFeature
};
export { initializeApp, SubFeatureOptions, SubFeature, FeatureB, FeatureA, Feature };
"
`;
